# duck-spc

./: .gitignore  CHANGELOG.md  LEARNINGS.md  Makefile  README.md  TODO.md  install-skills.sh  pyproject.toml  skills-lock.json
docs/deck/: index.html
notebooks/: trust_the_limits.py
src/duck_spc/: __init__.py  ascii_chart.py  chart.py  cli.py  core.py  demo.py  sql.py  synth.py
tests/: conftest.py  reference.py  test_cli.py  test_sql_source.py  test_xmr.py  tests_util.py
