[project]
name = "duck-spc"
version = "0.1.0"
description = "Statistical process control over large Parquet datasets, powered by DuckDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "numpy>=2.0",
    "pyarrow>=17",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duck_spc"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
